--- a/src/pages/login/index.html
+++ b/src/pages/login/index.html
@@ -84,7 +84,6 @@
             <button
               id="go_register"
               type="button"
-              href="/src/pages/register/"
               class="w-full text-center bg-white border rounded mt-10pxr text-primary py-10pxr border-primary"
             >
               회원가입
@@ -93,6 +92,7 @@
         </fieldset>
       </form>
     </main>
+    <div id="modal_box" class="hidden"></div>
     <footer id="footer"></footer>
   </body>
 </html>
