--- a/src/pages/cart/index.html
+++ b/src/pages/cart/index.html
@@ -26,8 +26,8 @@
       content="Better Life for All. 건강한 식재료부터 믿을 수 있는 뷰티, 라이프스타일 상품까지. 나와 내 가족이 사고 싶은 상품을 판매합니다. 내일 아침 문 앞에서 만나요!"
     />
 
-    <!-- <meta property="og:image" content="이미지 URL" /> -->
-    <!-- <meta property="og:url" content="웹페이지 URL" /> -->
+    <meta property="og:image" content="/jandi_logo.svg" />
+    <meta property="og:url" content="https://jandi-market.netlify.app/" />
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
     <link
       rel="stylesheet"
@@ -41,7 +41,6 @@
   </head>
   <body>
     <header id="header"></header>
-    <!-- <div id="addCart"></div> -->
     <!-- cart page -->
     <main class="cart_page">
       <section class="cart w1050 pb-80pxr">
@@ -80,9 +79,9 @@
 
             <!-- cart list -->
             <!-- cart list가 없을 떄  -->
-            <!-- <section>
+            <section class="cart_nonelist">
               <p class="text-center border-solid py-115pxr text-gray-200 font-label-large text-label-medium border-t-[1px] border-t-content border-b-[1px] border-b-gray-50 ">장바구니에 담긴 상품이 없습니다.</p>
-            </section> -->
+            </section>
 
             <!-- cart list가 있을 떄 -->
             <div class="border-b border-solid cart_list border-gray-50">
@@ -717,10 +716,10 @@
                   </div>
                 </article>
               </section>
-              <a
+              <button
                 href="#"
-                class="w-full order bg-primary block text-white rounded-[3px] h-56pxr text-label-medium font-semibold text-center leading-[56px]"
-                >주문하기</a
+                class="w-full order bg-primary block text-white rounded-[3px] h-56pxr text-label-medium font-semibold text-center leading-[56px] "
+                >주문하기</button
               >
               <ul class="text-gray-500 text-label-small">
                 <li
