[🎨Modify] : 수정사항 보완 및 코드설명 주석 추가

--- a/src/pages/productList/index.html
+++ b/src/pages/productList/index.html
@@ -25,8 +25,8 @@
       content="Better Life for All. 건강한 식재료부터 믿을 수 있는 뷰티, 라이프스타일 상품까지. 나와 내 가족이 사고 싶은 상품을 판매합니다. 내일 아침 문 앞에서 만나요!"
     />
 
-    <!-- <meta property="og:image" content="이미지 URL" /> -->
-    <!-- <meta property="og:url" content="웹페이지 URL" /> -->
+    <meta property="og:image" content="/jandi_logo.svg" />
+    <meta property="og:url" content="https://jandi-market.netlify.app/" />
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
 
     <link
@@ -72,11 +72,11 @@
                 </svg>
               </div>
             </button>
-            <ul class="flex flex-col hidden w-full gap-5 my-5 categoryDetail">
+            <ul class="flex-col hidden w-full gap-5 my-5 categoryDetail">
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">간편식·밀키트·샐러드</span>
               </li>
@@ -84,7 +84,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">국·반찬·메인요리</span>
               </li>
@@ -92,7 +92,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">정육·가공육·계란</span>
               </li>
@@ -100,7 +100,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">과일·견과·쌀</span>
               </li>
@@ -108,7 +108,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">생수·음료·커피</span>
               </li>
@@ -136,59 +136,59 @@
                 </svg>
               </div>
             </button>
-            <ul class="flex flex-col hidden w-full gap-5 my-5 categoryDetail">
+            <ul class="flex-col hidden w-full gap-5 my-5 categoryDetail">
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">
-                  집나간 밤비도 돌아오는 맛 
-                </br>효진쓰키친
+                  집나간 밤비도 돌아오는 맛<br />
+                  효진쓰키친
                 </span>
               </li>
 
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">
-                  충분히 먹고도 만원
-                </br>충만치킨
+                  충분히 먹고도 만원<br />
+                  충만치킨
                 </span>
               </li>
 
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">
-                  우는 유찬이도 뚝 그치는 맛
-                </br>쉪쉪승준
+                  우는 유찬이도 뚝 그치는 맛<br />
+                  쉪쉪승준
                 </span>
               </li>
 
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">
-                  맛을 디자인이 하다
-                  </br>주현식품
+                  맛을 디자인 하다<br />
+                  주현식품
                 </span>
               </li>
 
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">
-                  이 가격에 듬뿍 
-                  </br>이듬푸드
+                  이 가격에 듬뿍<br />
+                  이듬푸드
                 </span>
               </li>
             </ul>
@@ -214,11 +214,11 @@
                 </svg>
               </div>
             </button>
-            <ul class="flex flex-col hidden w-full gap-5 my-5 categoryDetail">
+            <ul class="flex-col hidden w-full gap-5 my-5 categoryDetail">
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">7,000원 미만</span>
               </li>
@@ -226,7 +226,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">7,000원 ~ 10,000원</span>
               </li>
@@ -234,7 +234,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">10,000원 ~ 20,000원</span>
               </li>
@@ -242,7 +242,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">20,000원 ~ 30,000원</span>
               </li>
@@ -250,7 +250,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">30,000원 이상</span>
               </li>
@@ -277,11 +277,11 @@
                 </svg>
               </div>
             </button>
-            <ul class="flex flex-col hidden w-full gap-5 my-5 categoryDetail">
+            <ul class="flex-col hidden w-full gap-5 my-5 categoryDetail">
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">할인상품</span>
               </li>
@@ -289,7 +289,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">세트할인</span>
               </li>
@@ -297,7 +297,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class=""> 1 + N 혜택</span>
               </li>
@@ -305,7 +305,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">대량구매 특가</span>
               </li>
@@ -313,7 +313,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">한정상품</span>
               </li>
@@ -341,11 +341,11 @@
                 </svg>
               </div>
             </button>
-            <ul class="flex flex-col hidden w-full gap-5 my-5 categoryDetail">
+            <ul class="flex-col hidden w-full gap-5 my-5 categoryDetail">
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">Jandi Only</span>
               </li>
@@ -353,7 +353,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">해외상품</span>
               </li>
@@ -361,7 +361,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">희소가치 프로젝트</span>
               </li>
@@ -369,7 +369,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">못난이 신선상품</span>
               </li>
@@ -377,7 +377,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">최저가 도전</span>
               </li>
@@ -404,11 +404,11 @@
                 </svg>
               </div>
             </button>
-            <ul class="flex flex-col hidden w-full gap-5 my-5 categoryDetail">
+            <ul class="flex-col hidden w-full gap-5 my-5 categoryDetail">
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">반려동물 상품</span>
               </li>
@@ -416,7 +416,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">비건전용 상품</span>
               </li>
@@ -424,7 +424,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">일본산 해산물</span>
               </li>
@@ -432,7 +432,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">수입상품</span>
               </li>
@@ -440,7 +440,7 @@
               <li class="flex cursor-pointer gap-10pxr checkbox-container">
                 <input class="hidden" type="checkbox" />
                 <button>
-                  <img src="/public/input/checkBox.svg" alt="체크박스 이미지" />
+                  <img src="/input/checkBox.svg" alt="체크박스 이미지" />
                 </button>
                 <span class="">고칼로리</span>
               </li>
@@ -448,7 +448,6 @@
           </div>
         </nav>
 
-        <section class="w-783pxr">
         <section class="w-783pxr">
           <div class="flex justify-between h-24pxr mb-20pxr">
             <div class="product-total text-14pxr"></div>
@@ -484,31 +483,7 @@
           <h2 class="sr-only">베스트 상품리스트</h2>
           <div class="w-[783px]">
             <ul class="flex flex-wrap justify-between product-container">
-              <!-- <li
-                class="flex flex-col items-start swiper-slide w-249pxr h-516pxr"
-              >
-                <a href="/src/pages/productDetail/">
-                  <img src="/public/banner/image-sample-for-test.jpg" alt="" />
-                </a>
-                <button class="mt-6pxr" type="button">
-                  <img src="/public/banner/add cart button.png" alt="" />
-                </button>
-                <span class="font-semibold text-gray-200 text-14pxr mt-16pxr"
-                  >사장님도 포기한 맛</span
-                >
-                <h3 class="font-bold text-16pxr mt-8pxr">
-                  맛없고 비싸기만한 쫄면
-                </h3>
-                <span class="font-normal text-gray-300 text-14pxr mt-16pxr"
-                  >90,000원</span
-                >
-                <div>
-                  <span class="m-0 font-bold text-orange-600 text-16pxr"
-                    >50%</span
-                  >
-                  <span class="m-0 font-semibold text-16pxr">45,000원</span>
-                </div>
-              </li>           -->
+              <!--상품 리스트 pb에서 동적 랜더링 -->
             </ul>
           </div>
         </section>
