[Feature/header#157] vite.config 경로 추가, modal 생성, header > bubble 컴포넌트 추가 (#161)
* [💄Design]: header z-index 값 변경

* [✨Feat]: 모달창 재사용 함수로 구현

* [🎨Modify]: vite.config에 경로 추가

- 모달함수 이름 변경

* [🎨Modify]: 필요없는 코드 삭제

* [💄Design]: header > bubble 컴포넌트 추가

- header 장바구니 아이콘에 bubble 컴포넌트 추가

--- a/src/pages/register/index.html
+++ b/src/pages/register/index.html
@@ -25,8 +25,8 @@
       content="Better Life for All. 건강한 식재료부터 믿을 수 있는 뷰티, 라이프스타일 상품까지. 나와 내 가족이 사고 싶은 상품을 판매합니다. 내일 아침 문 앞에서 만나요!"
     />
 
-    <!-- <meta property="og:image" content="이미지 URL" /> -->
-    <!-- <meta property="og:url" content="웹페이지 URL" /> -->
+    <meta property="og:image" content="/jandi_logo.svg" />
+    <meta property="og:url" content="https://jandi-market.netlify.app/" />
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
     <link
       rel="stylesheet"
@@ -367,7 +367,6 @@
         </section>
       </div>
     </main>
-    <div id="modal_box" class="hidden"></div>
     <footer id="footer"></footer>
   </body>
 </html>
