--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     />
     <meta property="og:image" content="/jandi_logo.svg" />
     <meta property="og:url" content="https://jandi-market.netlify.app/" />
+    <meta property="og:image" content="/jandi_logo.svg" />
+    <meta property="og:url" content="https://jandi-market.netlify.app/" />
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
     <link
       rel="stylesheet"
@@ -80,17 +82,15 @@
             />
           </div>
         </div>
-        <!-- Swiper 페이지 표시 -->
+        <!-- Swiper pagination -->
         <div
           class="text-white swiper-pagination w-55pxr h-23pxr bg-black bg-opacity-15 flex justify-center items-center z-10 rounded-full font-normal absolute bottom-25pxr left-[70%] text-16pxr"
+          class="text-white swiper-pagination w-55pxr h-23pxr bg-black bg-opacity-15 flex justify-center items-center z-10 rounded-full font-normal absolute bottom-25pxr left-[70%] text-16pxr"
         ></div>
-
-        <!-- Swiper PREV & NEXT 버튼  -->
-        <div
-          class="absolute hidden transition-opacity duration-500 left-300pxr botton-800pxr swiper-button-prev"
-        >
+        <!-- Swiper Prev & Next 버튼  -->
+        <div class="relative z-10 hidden swiper-button-prev">
           <svg
-            class="rotate-180"
+            class="absolute bottom-150pxr left-[20%]"
             role="img"
             width="60"
             height="60"
@@ -99,9 +99,17 @@
             <use href="/icon/_sprite.svg#Arrow_slide" />
           </svg>
         </div>
-        <div
-          class="absolute hidden transition-opacity duration-500 swiper-button-next right-300pxr"
-        ></div>
+        <div class="relative z-10 hidden swiper-button-next">
+          <svg
+            class="absolute rotate-180 bottom-150pxr right-[20%]"
+            role="img"
+            width="60"
+            height="60"
+            viewBox="0 0 52 52"
+          >
+            <use href="/icon/_sprite.svg#Arrow_slide" />
+          </svg>
+        </div>
       </div>
       <section
         class="w-[1050px] h-608pxr flex flex-col items-start py-40pxr gap-28pxr box-content overflow-hidden"
@@ -112,17 +120,21 @@
           <h2 class="text-[28.43px] font-bold">이 상품 어때요?</h2>
         </div>
         <!-- Product Swiper Main Container #1 -->
+        <!-- Product Swiper Main Container #1 -->
         <div class="swiper2 w-[1050px] h-516pxr">
+          <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
           <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
           <ul
             class="flex items-start justify-between w-full list-none recommended_product_list swiper-wrapper"
           >
-            <!-- 동적 pb 데이터 랜더링 부분 -->
+            <!-- 동적 pb 데이터 랜더링 삽입부 -->
           </ul>
+          <!-- Swiper 페이지 표시 -->
           <!-- Swiper 페이지 표시 -->
           <div class="swiper2-pagination"></div>
         </div>
       </section>
+      <!-- Swiper Prev & Next 버튼  -->
       <!-- Swiper Prev & Next 버튼  -->
       <div class="relative">
         <div
@@ -156,6 +168,7 @@
       </a>
 
       <!-- Product Swiper Main Container #2 -->
+      <!-- Product Swiper Main Container #2 -->
       <section
         class="w-[1050px] h-608pxr flex flex-col items-start py-40pxr gap-28pxr box-content overflow-hidden"
       >
@@ -169,10 +182,13 @@
             class="flex items-start justify-between w-full list-none cheap_product_list swiper-wrapper"
           >
             <!-- 동적 pb 데이터 랜더링 부분 -->
+            <!-- 동적 pb 데이터 랜더링 부분 -->
           </ul>
+          <!-- Swiper 페이지 표시 -->
           <!-- Swiper 페이지 표시 -->
           <div class="swiper3-pagination"></div>
         </div>
+        <!-- Swiper Prev & Next 버튼  -->
         <!-- Swiper Prev & Next 버튼  -->
       </section>
       <div class="relative">
@@ -199,6 +215,7 @@
         </div>
       </div>
     </main>
+    <div id="addCart" class="hidden"></div>
     <div id="addCart" class="hidden"></div>
     <footer id="footer"></footer>
   </body>
