--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
     />
     <meta property="og:image" content="/jandi_logo.svg" />
     <meta property="og:url" content="https://jandi-market.netlify.app/" />
-    <meta property="og:image" content="/jandi_logo.svg" />
-    <meta property="og:url" content="https://jandi-market.netlify.app/" />
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
     <link
       rel="stylesheet"
@@ -41,9 +39,12 @@
     <header id="header"></header>
     <main class="flex flex-col items-center justify-center size-full">
       <!-- 최상단 Slider Main Container -->
+      <!-- 최상단 Slider Main Container -->
       <div class="swiper max-w-[1920px] min-w-[1050px] w-screen min-h-370pxr">
         <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
+        <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
         <div class="swiper-wrapper">
+          <!-- Swiper 각 슬라이드 -->
           <!-- Swiper 각 슬라이드 -->
           <div
             class="flex items-center justify-center overflow-hidden swiper-slide"
@@ -82,9 +83,8 @@
             />
           </div>
         </div>
-        <!-- Swiper pagination -->
+        <!-- Swiper 페이지 표시 -->
         <div
-          class="text-white swiper-pagination w-55pxr h-23pxr bg-black bg-opacity-15 flex justify-center items-center z-10 rounded-full font-normal absolute bottom-25pxr left-[70%] text-16pxr"
           class="text-white swiper-pagination w-55pxr h-23pxr bg-black bg-opacity-15 flex justify-center items-center z-10 rounded-full font-normal absolute bottom-25pxr left-[70%] text-16pxr"
         ></div>
         <!-- Swiper Prev & Next 버튼  -->
@@ -120,9 +120,7 @@
           <h2 class="text-[28.43px] font-bold">이 상품 어때요?</h2>
         </div>
         <!-- Product Swiper Main Container #1 -->
-        <!-- Product Swiper Main Container #1 -->
         <div class="swiper2 w-[1050px] h-516pxr">
-          <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
           <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
           <ul
             class="flex items-start justify-between w-full list-none recommended_product_list swiper-wrapper"
@@ -130,11 +128,9 @@
             <!-- 동적 pb 데이터 랜더링 삽입부 -->
           </ul>
           <!-- Swiper 페이지 표시 -->
-          <!-- Swiper 페이지 표시 -->
           <div class="swiper2-pagination"></div>
         </div>
       </section>
-      <!-- Swiper Prev & Next 버튼  -->
       <!-- Swiper Prev & Next 버튼  -->
       <div class="relative">
         <div
@@ -168,7 +164,6 @@
       </a>
 
       <!-- Product Swiper Main Container #2 -->
-      <!-- Product Swiper Main Container #2 -->
       <section
         class="w-[1050px] h-608pxr flex flex-col items-start py-40pxr gap-28pxr box-content overflow-hidden"
       >
@@ -182,13 +177,10 @@
             class="flex items-start justify-between w-full list-none cheap_product_list swiper-wrapper"
           >
             <!-- 동적 pb 데이터 랜더링 부분 -->
-            <!-- 동적 pb 데이터 랜더링 부분 -->
           </ul>
-          <!-- Swiper 페이지 표시 -->
           <!-- Swiper 페이지 표시 -->
           <div class="swiper3-pagination"></div>
         </div>
-        <!-- Swiper Prev & Next 버튼  -->
         <!-- Swiper Prev & Next 버튼  -->
       </section>
       <div class="relative">
@@ -215,7 +207,6 @@
         </div>
       </div>
     </main>
-    <div id="addCart" class="hidden"></div>
     <div id="addCart" class="hidden"></div>
     <footer id="footer"></footer>
   </body>
