[✨Feat]: addCart modal UI 구현

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
       <a class="block w-[1050px] h-139pxr my-40pxr" href="#">
         <img
-          src="/banner/line-banner 1.png"
+          src="/banner/line_banner_1.png"
           alt="컬리스 퍼플 윅, 더 풍성해진 10월의 퍼플위크"
         />
       </a>
@@ -207,7 +207,7 @@
         </div>
       </div>
     </main>
-    <div id="addCart" class="hidden"></div>
+    <div id="addCart"></div>
     <footer id="footer"></footer>
   </body>
 </html>
